<resources>
    <string name="app_name">ReFood</string>
    <string name="inciarseccion">Iniciar Sesion</string>
    <string name="registrar">Registrarse</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="advertencialogin">Al continuar,tambíen acepta las condiciones de servicio y las politicas de privacidad</string>
    <string name="perfil">PERFIL</string>
    <string name="guardar">Guardar</string>
    <string name="aggftperfil">Agregar foto de perfil</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechanacimiento">Fecha de Nacimiento</string>
    <string name="genero">Genero</string>
    <string name="telefono">Numero de Telefono</string>
    <string name="donar">DONAR</string>
    <string name="recibir">BUSCAR DONACIONES</string>
    <string name="publicaciones">PUBLICACIONES</string>
    <string name="detallespubli">Detalles publicacion</string>PP
    <string name="detallesentrega">DETALLES DE ENTREGA</string>
    <string name="detallesdonacion">Detalles De La Donacion </string>
    <string name="recoger">Recoger</string>
    <string name="envio">Organizar envio</string>
    <string name="donador">NOMBRE DEL ESTABLECIMIENTO O PERSONA</string>
    <string name="contacto">NUMERO DE CONTACTO</string>
    <string name="descripcion">INGRESA LA DESCRIPCION DEL PRODUCTO</string>
    <string name="imagenes">AGREGAR IMAGENES</string>
    <string name="nota">AGREGAR NOTA ADICIONAL</string>
    <string name="seleccionar_imagenes">Seleccionar imágenes</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="hint_nota">Escriba una nota adicional</string>
    <string name="title_activity_ubicacionz">Ubicacion</string>
    <string name="verdonacion">Detalles De La Donacion</string>
    <string name="titulo_donacion">DONACION</string>
    <string name="descripciondonacion">Imagen de fondo para la sección de donación</string>
    <string name="label_nombre_donante">Nombre del donante</string>
    <string name="label_descripcion_donacion">Descripción de la donación</string>
    <string name="label_ubicacion">Ubicación</string>
    <string name="label_contacto">Contacto</string>
    <string name="boton_chatear">Chatear</string>
    <string name="boton_llamar">Llamar</string>
    <string name="ejemplo_nombre_donante">Juan Pérez</string>
    <string name="ejemplo_descripcion">alimentos no perecederos</string>
    <string name="ejemplo_web">www.paginaweb.co</string>
    <string name="ejemplo_contacto">contacto@event.com</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="seguridad">Seguridad</string>
    <string name="Editar_Perfil">Editar Perfil</string>
    <string name="tema">Tema</string>
    <string name="idioma">Idioma</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="name">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="contact_number">Número de Contacto</string>
    <string name="address">Dirección</string>
    <string name="save">Guardar</string>
    <string name="misdonaciones">MIS DONACIONES</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_button_text">¿No tienes cuenta? Regístrate</string>
    <string name="forgot_password_text">¿Olvidaste tu contraseña?</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_invalid_email">El correo electrónico no es válido</string>
    <string name="fecha_publicacion">13/03/2025</string>
    <string name="hora_publicacion">12:00</string>"
    <string name="elminarperfil">Eliminar Usuario</string>
    <string name="notis">Notificaciones</string>
    <string name="titulo_hacerdonacion">Hacer Donación</string>
    <string name="nombre_donador">NOMBRE DEL DONADOR</string>
    <string name="metodoentrega">MÉTODO DE ENTREGA</string>
    <string name="contacto_donador">NUMERO DE CONTACTO</string>
    <string name="tit_donacion">DALE TÍTULO A TU DONACIÓN</string>
    <string name="hint_tit_descrip"> Ejm: Mini Mercado Surtido  </string>
    <string name="descrip">DESCRIPCIÓN</string>
    <string name="hint_descrip">Escribir Descripción de la Donación</string>
    <string name="img">IMAGENES</string>
    <string name="agr_imgs">AGREGAR IMAGENES</string>
    <string name="envio1">Ustedes Envían la Donación</string>
    <string name="recoger1">Nosotros Recogemos la Donación</string>
    <string name="sgte">SIGUIENTE</string>
    <string name="tit_verdonacion">Detalles de la Donación</string>
    <string name="chat">CHATEAR</string>
    <string name="Llamar">LLAMAR</string>
</resources>