<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- barra de navegacion-->
    <LinearLayout
        android:id="@+id/barradenavegacion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/azulbtn"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <ImageButton
            android:id="@+id/btnatras"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/flechaizquierda"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inciarseccion"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center_vertical"
            android:textSize="25dp"/>

    </LinearLayout>

    <!-- contenido principal-->

    <LinearLayout
        android:id="@+id/contenidoprincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fondoazul"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/barradenavegacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        
        <FrameLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/usuario1"
                android:background="@drawable/usuario"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggftperfil"
            android:layout_gravity="center"
            android:textColor="@color/azulvinculo"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">


            <EditText
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/nombres"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:layout_weight="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/apellidos"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:layout_weight="1"
                android:inputType="text"/>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/correo"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:inputType="textEmailAddress" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/contraseña"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:inputType="textPassword" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/telefono"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:inputType="phone" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/fechanacimiento"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:inputType="text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangulo"
                android:hint="@string/genero"
                android:textColorHint="@color/avisos"
                android:paddingHorizontal="30dp"
                android:inputType="text" />



        </LinearLayout>




    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>