<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".IniciarSesion">

    <!-- barra de navegacion-->
    <LinearLayout
        android:id="@+id/barradenavegacion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/azulbtn"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <ImageButton
            android:id="@+id/btnatras"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/flechaizquierda"
            android:scaleType="fitCenter"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="25dp"/>


    </LinearLayout>

    <!-- contenido principal-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fondoazul"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/barradenavegacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/refoodlogo"
            android:layout_marginTop="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="30dp"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/playfairdisplayextrabolditalic"/>
        
        <EditText
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:background="@drawable/rectangulo"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:hint="@string/correo"
            android:textColorHint="@color/avisos"
            android:textSize="15dp"
            android:paddingLeft="40dp"
            android:inputType="textEmailAddress"/>


        <EditText
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:background="@drawable/rectangulo"
            android:layout_gravity="center_horizontal"
            android:hint="@string/contraseña"
            android:textSize="15dp"
            android:textColorHint="@color/avisos"
            android:paddingLeft="40dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btningresar"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/azulbtn"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/advertencialogin"
            android:gravity="center_horizontal"
            android:textColor="@color/avisos"
            android:textSize="16dp"
            android:layout_marginTop="30dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>